# bboards

./: bboards.data  manage.py  pyproject.toml  pyvenv.cfg
bboards/: asgi.py  settings.py  urls.py  wsgi.py
main/: __init__.py  admin.py  apps.py  forms.py  middlewares.py  models.py  urls.py  utilities.py  views.py
main/migrations/: 0001_initial.py  0002_alter_advuser_send_messages.py  0003_alter_advuser_first_name_alter_advuser_last_name.py  0004_alter_advuser_first_name_alter_advuser_last_name.py  0005_rubric_subrubric_superrubric_rubric_super_rubric.py  0006_bb_additionalimage.py
main/static/main/: style.css
main/templates/email/: activation_letter_body.txt
main/templates/layout/: basic.html
main/templates/main/: about.html  activation_done.html  bad_signature.html  by_rubric.html  change_user_info.html  delete_user.html  detail.html  index.html  login.html  logout.html  password_change.html  profile.html  register_done.html  register_user.html  user_is_activated.html
